# barrins-project

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  barrins.code-workspace
.github/: dependabot.yml
.github/workflows/: CI.yml  README.md
apps/barrins-api/: README.md
apps/barrins_api/: .env.example  CHANGELOG.fragment.md  README.md  pyproject.toml
apps/barrins_api/alembic/: README.md  env.py
apps/barrins_api/alembic/versions/: 508342845e8c_add_users_table_with_roles_and_token_.py.py  bef3351513a5_add_auth_email_verifications_table.py  ef2a570b4f4f_add_tamiyo_scroll_tracker_tables.py
apps/barrins_api/app/: main.py
apps/barrins_api/app/api/: __init__.py  health.py  ts_router.py  v1_router.py
apps/barrins_api/app/api/bff/: __init__.py
apps/barrins_api/app/api/bff/ts_router/: __init__.py  card_tests.py  matches.py  meta_decks.py  personal_decks.py  settings.py  stats.py
apps/barrins_api/app/api/v1/: __init__.py  auth.py
apps/barrins_api/app/config/: __init__.py  base.py
apps/barrins_api/app/core/: error_handlers.py  log_config.py  security.py
apps/barrins_api/app/database/: __init__.py  connection.py  session.py
apps/barrins_api/app/dependencies/: __init__.py  auth.py
apps/barrins_api/app/models/: __init__.py  _types.py  base.py  email_verification.py  tamiyo_scroll.py  user.py
apps/barrins_api/app/schemas/: auth.py  responses_base.py  responses_health.py  responses_tamiyo_scroll.py  tamiyo_scroll.py
apps/barrins_api/app/services/: __init__.py
apps/barrins_api/app/services/email/: __init__.py  base.py  console_sender.py  smtp_sender.py
apps/barrins_api/app/services/tamiyo_scroll/: __init__.py  decklist_coloring.py  ownership.py  stats.py
apps/barrins_api/scripts/: create_admin.py  workflow_ci.py
apps/barrins_api/tests/: conftest.py  helpers.py  test_auth.py  test_config.py  test_core.py  test_email_srvice.py  test_error_handlers.py  test_health.py  test_log_config.py  test_signup.py
apps/barrins_api/tests/tamiyo_scroll/: conftest.py  test_card_tests.py  test_decklist_coloring.py  test_matches.py  test_meta_decks.py  test_ownership.py  test_personal_decks.py  test_settings.py  test_stats_routes.py  test_stats_service.py
apps/barrins_identity/: .env.example  README.md  alembic.ini  pyproject.toml
apps/barrins_identity/alembic/: env.py  script.py.mako
apps/barrins_identity/alembic/versions/: a1b2c3d4e5f6_initial_schema_users_and_service_.py  b2c3d4e5f6a7_add_email_verifications_table.py  c3d4e5f6a7b8_add_password_reset_codes_table.py  d4e5f6a7b8c9_add_email_change_requests_table.py  e5f6a7b8c9d0_add_app_settings_table.py
apps/barrins_identity/app/: __init__.py  main.py
apps/barrins_identity/app/api/: v1_router.py
apps/barrins_identity/app/api/v1/: auth.py  service_accounts.py  users.py  well_known.py
apps/barrins_identity/app/config/: __init__.py  base.py
apps/barrins_identity/app/core/: __init__.py  error_handlers.py  exceptions.py  log_config.py  rate_limit.py  security.py
apps/barrins_identity/app/database/: __init__.py  connection.py  session.py
apps/barrins_identity/app/dependencies/: __init__.py  auth.py
apps/barrins_identity/app/models/: __init__.py  _types.py  app_settings.py  email_change_request.py  password_reset.py  service_account.py  user.py
apps/barrins_identity/app/schemas/: app_settings.py  auth.py  service_account.py  users.py
apps/barrins_identity/app/services/: __init__.py
apps/barrins_identity/app/services/email/: base.py  console_sender.py  smtp_sender.py
apps/barrins_identity/scripts/: create_admin.py
apps/barrins_identity/tests/: conftest.py  helpers.py  test_config.py  test_core.py  test_dependencies.py  test_email_service.py  test_error_handlers.py  test_jwks.py  test_log_config.py  test_models.py  test_rate_limit.py  test_routes_app_settings.py  test_routes_auth.py  test_routes_password_reset.py  test_routes_service_accounts.py  test_routes_users.py  test_schemas.py  test_security.py  test_signup.py  test_types.py
apps/goblin_guide/: README.md
apps/karn_tablets/: README.md
apps/tamiyo_scroll/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/tamiyo_scroll/src/: App.tsx  index.css
apps/tamiyo_scroll/src/api/: auth.ts  cardTests.ts  client.ts  matches.ts  metaDecks.ts  personalDecks.ts  session.ts  settings.ts  stats.ts  viewingOwner.ts
apps/tamiyo_scroll/src/contexts/: active-deck-context.test.tsx  active-deck-context.tsx
apps/tamiyo_scroll/src/hooks/: useAuth.ts  useCardTests.ts  useDecklistVersions.ts  useMatches.ts  useMetaDecks.ts  usePersonalDecks.ts  useSettings.ts  useStats.ts  useViewingOwner.ts
apps/tamiyo_scroll/src/lib/: mtg-format.test.ts  mtg-format.ts  queryClient.ts  store.ts
apps/tamiyo_scroll/src/pages/: DecklistTab.tsx  LoginPage.tsx  MetagameTab.tsx  SuiviBo3Tab.tsx  VerifyEmailPage.tsx
apps/tamiyo_scroll/src/schemas/: auth.ts  tamiyoScroll.ts
apps/tolaria_news/: README.md
docs/: .markdownlint.jsonc  CNAME  README.md  cspell.json  mkdocs.yml  package.json
docs/content/: CHANGELOG.md  CLAUDE.md  index.md
docs/content/back/: index.md
docs/content/back/barrins_api/: _links.md  auth_roles.md  index.md  signup_email_verification.md
docs/content/back/barrins_identity/: _links.md  index.md  platform.md  tests.md
docs/content/back/karn_tablets/: _links.md
docs/content/back/tolaria_news/: platform.md
docs/content/front/: index.md
docs/content/front/goblin_guide/: _links.md  bootstrap.md
docs/content/front/tamiyo_scroll/: _links.md  bootstrap.md  index.md
docs/content/front/tolaria_news/: platform.md
docs/content/ops/: deployment_strategy.md  index.md
docs/content/ops/architecture/: decisions.md  independence.md  index.md
docs/hooks/: sync_readmes.py
docs/project/first_production_release/: index.md
ops/my-server/: README.md  ansible.cfg  barrins_api.yml  hosts.ini  initial.yml  postgresql_pgadmin.yml  requirements.yml  setup.yml  tamiyo_scroll.yml  tolaria_news.yml
ops/my-server/scripts/: check_no_secrets_committed.sh
ops/my-server/secrets/: README.md
(+99 files in other folders)
