[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "barrins_project"
version = "0.3.0"
authors = [
    { name = "Martin Cuchet", email = "martin.cuchet+barrins_project@gmail.com" }
]
description = "API meant to extract and provide data based on MTGO scrapping."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["mtg", "Magic: the Gathering", "CCG", "MTGO"]
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.2",
    "httpx>=0.28.1,<1.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
test = [
    "httpx>=0.28.1,<1.0",
    "lxml>=6.1.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
dev = [
    { include-group = "test" },
    "alembic>=1.18.5",
    "bandit[toml]>=1.9.4",
    "ruff>=0.15.22",
    "ty>=0.0.61",
    "zest.releaser[recommended]>=9.9.1",
]

[tool.setuptools.packages.find]
include = ["*"]

# required for dynamic version
[tool.setuptools_scm]

[tool.zest-releaser]
create-wheel = true

[tool.ruff]
line-length = 88
indent-width = 4
extend-exclude = [
    "alembic",
    "docs",
    "reports",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
    "A",   # flake8-builtins
]
ignore = ["E402", "E712", "F403", "S101"]  # S101: allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["tests"]

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scripts", "build", "dist", ".venv", "alembic"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "api: marks tests as API tests",
    "db: marks tests requiring database",
    "performance: marks tests as performance benchmarks",
]

[tool.coverage.run]
source = ["app"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/alembic/*",
    "scripts/*",
]

[tool.coverage.report]
precision = 2
# Afficher les lignes manquantes
show_missing = true
skip_empty = true
skip_covered = false
# Seuil minimal de couverture (optionnel, fail si en dessous)
fail_under = 90

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError:",
    "pass",
    "\\.\\.\\.",  # Ignorer les ellipsis
]

[tool.coverage.html]
directory = "reports/pytest_html_report"
