[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "barrins_identity"
version = "0.1.0"
authors = [
    { name = "Martin Cuchet", email = "martin.cuchet+barrins_project@gmail.com" }
]
description = "Shared JWT (RS256) identity & service-account authority for the Barrin's ecosystem."
readme = "README.md"
license = { file = "../../LICENSE" }
keywords = ["mtg", "Magic: the Gathering", "identity", "authentication"]
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "cryptography>=44.0.0",
    "fastapi>=0.139.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
test = [
    "httpx>=0.28.1,<1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
dev = [
    { include-group = "test" },
    "alembic>=1.18.5",
    "bandit[toml]>=1.9.4",
    "ruff>=0.15.22",
    "ty>=0.0.61",
    "zest.releaser[recommended]>=9.9.1",
]

[tool.setuptools.packages.find]
include = ["*"]

[tool.setuptools_scm]

[tool.zest-releaser]
create-wheel = true

[tool.ruff]
line-length = 88
indent-width = 4
extend-exclude = [
    "alembic",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
    "A",   # flake8-builtins
]
ignore = ["E402", "E712", "F403", "S101"]  # S101: allow assert in tests

[tool.ruff.lint.per-file-ignores]
# Test fixtures legitimately contain literal passwords/secrets/tokens.
"tests/*" = ["S105", "S106", "S107"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["tests"]

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["scripts", "build", "dist", ".venv", "alembic"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "api: marks tests as API tests",
    "db: marks tests requiring database",
]

[tool.coverage.run]
source = ["app"]
branch = true
# SQLAlchemy's async ORM bridges every `await session.execute(...)` /
# `await session.commit()` through a greenlet (greenlet_spawn) — without
# this, coverage.py's default tracer loses the route-handler frames that
# resume inside that greenlet, under-reporting DB-touching endpoints.
concurrency = ["greenlet"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/alembic/*",
    "scripts/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_empty = true
skip_covered = false
fail_under = 92

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError:",
    "pass",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "reports/pytest_html_report"
